# meetaction-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.demo  README.md  docker-compose.full.yml  docker-compose.yml  evals_result.md  pyproject.toml
app/: config.py  main.py  ui.py
app/agent/: graph.py  state.py
app/agent/nodes/: _transcribe_deepgram.py  classifier.py  creator.py  extractor_consultation.py  extractor_work.py  hitl_gate.py  ingest.py  injection_check.py  pii_filter.py  proposer.py  rag_indexer.py  refine.py  transcribe.py
app/llm/: client.py
app/observability/: logger.py  token_counter.py
app/retriever/: rag.py
app/schemas/: api.py  common.py  extraction.py  task.py
app/tools/: todoist.py
docs/: diagrams.md  governance.md  product-proposal.md  system-design.md
docs/specs/: agent_orchestrator.md  memory_context.md  observability_evals.md  retriever.md  serving_config.md  tools_apis.md
tests/evals/: run_evals.py
tests/evals/synthetic_transcripts/: consultation_01.txt  consultation_02.txt  consultation_03.txt  consultation_04.txt  consultation_05.txt  consultation_06_injection.txt  work_01.txt  work_02.txt  work_03.txt  work_04.txt  work_05.txt  work_06_pii.txt  work_07_injection.txt
