[project]
name = "meetaction-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "gradio>=6.11.0",
    "httpx>=0.28.1",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-redis>=0.4.0",
    "loguru>=0.7.3",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
    "whisperx>=3.8.5",
]
